src/scripts/OSUIFramework/Pattern/Tabs/scss/_tabs.scss
/*! Patterns - Navigation - Tabs */
////
/// @group Patterns-Tabs
/// Patterns - Navigation - Tabs

///
.osui-tabs {
	display: grid;
	height: var(--tabs-height);

	&--is-vertical {
		grid-auto-flow: row;
		grid-template-columns: auto 1fr;

		&.osui-tabs--is-right {
			grid-auto-flow: dense;
			grid-template-columns: 1fr auto;

			.osui-tabs__header {
				border-left: var(--border-size-s) solid var(--color-neutral-5);
				grid-column: 2;

				&-item {
					padding: var(--space-xs) 0 var(--space-xs) var(--space-base);

					&::after {
						left: calc(1px - var(--border-size-m));
					}

					&:hover:not(.osui-tabs--is-active)::after {
						border-left: var(--border-size-m) solid var(--color-neutral-6);
					}

					&.osui-tabs--is-active::after {
						border-left: var(--border-size-m) solid var(--color-primary);
					}
				}
			}
		}

		&.osui-tabs--is-left {
			.osui-tabs__header {
				border-right: var(--border-size-s) solid var(--color-neutral-5);

				&-item {
					padding: var(--space-xs) var(--space-base) var(--space-xs) 0;

					&::after {
						right: calc(-1px - var(--border-size-m));
					}

					&:hover:not(.osui-tabs--is-active)::after {
						border-right: var(--border-size-m) solid var(--color-neutral-6);
					}

					&.osui-tabs--is-active::after {
						border-right: var(--border-size-m) solid var(--color-primary);
					}
				}
			}
		}

		.osui-tabs__header {
			align-content: start;
			grid-auto-flow: row;
			overflow-y: auto;
			overflow-x: hidden;

			&-item {
				border-right: var(--border-size-m) solid transparent;
				flex: none;
				justify-content: flex-start;

				&::after {
					height: 100%;
				}

				&.osui-tabs--is-active::after {
					height: 100%;
				}
			}
		}

		.osui-tabs__content {
			overflow-x: hidden;
			overflow-y: auto;
			padding: var(--space-none) var(--space-m);

			&-item:not(.osui-tabs--is-active) {
				display: none;
			}
		}
	}

	&--is-horizontal {
		grid-auto-flow: column;
		grid-template-rows: auto 1fr;

		.osui-tabs__header {
			border-bottom: var(--border-size-s) solid var(--color-neutral-5);
			grid-auto-flow: column;
			justify-content: start;
			overflow-y: hidden;
			overflow-x: auto;
			word-break: keep-all;

			&-item {
				border-bottom: var(--border-size-m) solid transparent;
				justify-content: center;
				padding: var(--space-base) var(--space-xs);

				&::after {
					bottom: calc(-1px - var(--border-size-m));
					width: 100%;
				}

				&:hover:not(.osui-tabs--is-active)::after {
					border-bottom: var(--border-size-m) solid var(--color-neutral-6);
				}

				&.osui-tabs--is-active::after {
					border-bottom: var(--border-size-m) solid var(--color-primary);
				}
			}
		}

		.osui-tabs__content {
			display: grid;
			grid-auto-flow: column;
			grid-auto-columns: 100%;
			overflow-x: auto;
			overflow-y: hidden;
			overscroll-behavior-x: contain;
			padding: var(--space-m) var(--space-none);
			scroll-snap-type: x mandatory;
		}
	}

	&--is-justified {
		&.osui-tabs--is-horizontal {
			.osui-tabs__header {
				justify-content: initial;
			}
		}

		&.osui-tabs--is-vertical {
			.osui-tabs__header {
				align-content: initial;
			}
		}
	}

	&__header {
		display: grid;

		&-item {
			align-items: center;
			background-color: transparent;
			border: none;
			color: var(--color-neutral-8);
			cursor: pointer;
			display: inline-flex;
			height: 100%;
			position: relative;
			min-height: 42px;
			width: 100%;

			&:hover:not(.osui-tabs--is-active) {
				color: var(--color-neutral-10);
			}

			&.osui-tabs--is-active {
				color: var(--color-primary);
			}

			&::after {
				content: '';
				position: absolute;
				z-index: 1;
			}
		}
	}

	&__content {
		width: 100%;

		&::-webkit-scrollbar {
			display: none;
		}

		&-item {
			overflow-y: auto;
			scroll-snap-align: start;
			scroll-snap-stop: always;
		}
	}

	&__header,
	&__content {
		.ph > .list,
		.ph > .OSBlockWidget {
			display: contents;
		}
	}
}

///
.has-accessible-features {
	.osui-tabs__header-item {
		border: var(--border-size-m) solid transparent;

		&.osui-tabs--is-active:focus {
			border: var(--border-size-m) solid var(--color-focus-outer);
			box-shadow: none;
		}
	}
}

